--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -21,7 +21,8 @@
     <h2>About Me</h2>
     <img src="IMAGE/IMG_5677.JPG" alt="Profile Picture" class="profile-pic" />
     <p>I’m an Information Technology student from Karatina University. I love building things with HTML, CSS, JavaScript, Python, and diving into cybersecurity and C/C++.</p>
-    <a href="/Tony_CV.pdf" download>Download CV</a>
+    <a href="/my-cv-folder/Tony_CV.pdf" download>Download CV</a>
+
   </section>
   <section id="projects">
     <h2>Projects</h2>
